--- a/LeetCode/741-750/743. 网络延迟时间（中等）.md
+++ b/LeetCode/741-750/743. 网络延迟时间（中等）.md
@@ -6,7 +6,7 @@ Tag : 「最短路」、「图」、「优先队列（堆）」
 
 
 
-有 n 个网络节点，标记为 1 到 n。
+有 $n$ 个网络节点，标记为 $1$ 到 $n$。
 
 给你一个列表 times，表示信号经过 有向 边的传递时间。 times[i] = (ui, vi, wi)，其中 ui 是源节点，vi 是目标节点， wi 是一个信号从源节点传递到目标节点的时间。
 
@@ -34,13 +34,13 @@ Tag : 「最短路」、「图」、「优先队列（堆）」
 ```
 
 提示：
-* 1 <= k <= n <= 100
-* 1 <= times.length <= 6000
-* times[i].length == 3
-* 1 <= ui, vi <= n
-* ui != vi
-* 0 <= wi <= 100
-* 所有 (ui, vi) 对都 互不相同（即，不含重复边）
+* $1 <= k <= n <= 100$
+* $1 <= times.length <= 6000$
+* $times[i].length == 3$
+* $1 <= u_i, v_i <= n$
+* $u_i != v_i$
+* $0 <= w_i <= 100$
+* 所有 $(u_i, v_i)$ 对都 互不相同（即，不含重复边）
 
 ---
 
@@ -467,7 +467,7 @@ class Solution {
     }
 }
 ```
-* 时间复杂度：$O(n*m)$
+* 时间复杂度：$O(n \times m)$
 * 空间复杂度：$O(m)$
 
 ---
@@ -547,7 +547,7 @@ class Solution {
     }
 }
 ```
-* 时间复杂度：$O(n*m)$
+* 时间复杂度：$O(n \times m)$
 * 空间复杂度：$O(m)$
 
 
