--- a/LeetCode/641-650/648. 单词替换（中等）.md
+++ b/LeetCode/641-650/648. 单词替换（中等）.md
@@ -40,8 +40,7 @@ Tag : 「字典树」
 
 ### 基本分析
 
-这是一道 `Trie` 的模板题，还不了解 `Trie` 的同学可以先看前置 🧀：[【设计数据结构】实现 Trie (前缀树)
-](https://mp.weixin.qq.com/s?__biz=MzU4NDE3MTEyMA==&mid=2247488490&idx=1&sn=db2998cb0e5f08684ee1b6009b974089)
+这是一道 `Trie` 的模板题，还不了解 `Trie` 的同学可以先看前置 🧀：[【设计数据结构】实现 Trie (前缀树)](https://mp.weixin.qq.com/s?__biz=MzU4NDE3MTEyMA==&mid=2247488490&idx=1&sn=db2998cb0e5f08684ee1b6009b974089)
 
 前置 🧀 通过图解形式讲解了 `Trie` 的结构与原理，以及提供了两种实现 `Trie` 的方式。
 
