--- a/LeetCode/1251-1260/1252. 奇数值单元格的数目（简单）.md
+++ b/LeetCode/1251-1260/1252. 奇数值单元格的数目（简单）.md
@@ -64,7 +64,7 @@ Tag : 「模拟」、「位运算」、「计数」
 
 当 $r[idx]$ 为 `True` 含义为第 $idx$ 行的累加值为奇数，否则为偶数。列数组 `c` 的统计规则同理。
 
-代码：
+Java 代码：
 ```Java
 class Solution {
     public int oddCells(int m, int n, int[][] ins) {
@@ -78,6 +78,29 @@ class Solution {
     }
 }
 ```
+TypeScript 代码：
+```TypeScript
+function oddCells(m: number, n: number, ins: number[][]): number {
+    const r = new Array<boolean>(m).fill(false), c = new Array<boolean>(n).fill(false)
+    let a = 0, b = 0
+    for (const [i, j] of ins) {
+        a += (r[i] = !r[i]) ? 1 : -1
+        b += (c[j] = !c[j]) ? 1 : -1
+    }
+    return a * (n - b) + (m - a) * b
+};
+```
+Python 代码：
+```Python3
+class Solution:
+    def oddCells(self, m: int, n: int, ins: List[List[int]]) -> int:
+        r, c = [False] * m, [False] * n
+        for i, j in ins:
+            r[i] ^= 1
+            c[j] ^= 1
+        a, b = sum(r), sum(c)
+        return a * (n - b) + (m - a) * b
+```
 * 时间复杂度：构建计数数组的复杂度为 $O(m + n)$，统计奇数行和奇数列复杂度为 $O(l)$，其中 $l$ 为数组 `ins` 的长度，复杂度为 $O(m + n + l)$
 * 空间复杂度：$O(m + n)$
 
@@ -87,9 +110,9 @@ class Solution {
 
 更进一步，我们可以使用两个 `long` 变量 $c1$ 和 $c2$ 来分别充当行和列的计数数组，当 $c1$ 的第 $k$ 位为 $1$，代表第 $k$ 行累加值为奇数，当 $c1$ 的第 $k$ 位为 $0$，代表第 $k$ 行累加值为偶数；$c2$ 的计数规则同理。而翻转二进制中的某一位可使用「异或」操作。
 
-当处理完所有的 `ins` 之后，可通过「遍历 $c1$ 的低 $m$ 位 + 遍历 $c2$ 的低 $n$ 位」来得到行数中奇数个数 $a$，列数中奇数个数 $b$，复杂度为 $O(m + n)$；也使用 `bitCount` 统计 `long` 二进制数中 $1$ 的个数（本质是分治操作），复杂度为 $O(\log{64})$。
+当处理完所有的 `ins` 之后，可通过「遍历 $c1$ 的低 $m$ 位 + 遍历 $c2$ 的低 $n$ 位」来得到行数中奇数个数 $a$，列数中奇数个数 $b$，复杂度为 $O(m + n)$；也可以使用 `bitCount` 统计 `long` 二进制数中 $1$ 的个数（本质是分治操作），复杂度为 $O(\log{64})$。
 
-代码：
+Java 代码：
 ```Java
 class Solution {
     public int oddCells(int m, int n, int[][] ins) {
@@ -105,9 +128,7 @@ class Solution {
     }
 }
 ```
-
--
-
+Java 代码：
 ```Java
 class Solution {
     public int oddCells(int m, int n, int[][] ins) {
@@ -121,8 +142,78 @@ class Solution {
     }
 }
 ```
+TypeScript 代码：
+```TypeScript
+function oddCells(m: number, n: number, ins: number[][]): number {
+    const c1 = [0, 0], c2 = [0, 0]
+    for (const [i, j] of ins) {
+        c1[Math.ceil(i / 32)] ^= (1 << (i % 32))
+        c2[Math.ceil(j / 32)] ^= (1 << (j % 32))
+    }
+    let a = 0, b = 0
+    for (let i = 0; i < m; i++) a += (c1[Math.ceil(i / 32)] >> (i % 32) & 1)
+    for (let i = 0; i < n; i++) b += (c2[Math.ceil(i / 32)] >> (i % 32) & 1)
+    return a * (n - b) + (m - a) * b
+};
+```
+Python 代码：
+```Python3
+class Solution:
+    def oddCells(self, m: int, n: int, ins: List[List[int]]) -> int:
+        c1, c2 = 0, 0
+        for i, j in ins:
+            c1 ^= (1 << i)
+            c2 ^= (1 << j)
+        a, b = 0, 0
+        for i in range(m):
+            a += (c1 >> i) & 1
+        for i in range(n):
+            b += (c2 >> i) & 1
+        return a * (n - b) + (m - a) * b
+```
 * 时间复杂度：处理所有的 `ins` 复杂度为 $O(l)$，其中 $l$ 为数组 `ins` 的长度；使用遍历方式统计奇数行和奇数列个数复杂度为 $O(m + n)$；使用 `bitCount` 操作统计二进制中 $1$ 个数，复杂度为 $O(\log{C})$，其中 $C = 64$ 为 `long` 二进制数长度，整体复杂度为 $O(l + m + n)$ 或 $O(l + \log{C})$ 
 * 空间复杂度：$O(1)$
+
+---
+
+### 答疑
+
+评论区有同学提到 `bitCount` 的复杂度问题，如下是 `Long.bitCount` 操作的源码：
+
+```Java
+public static int bitCount(long i) {
+    // HD, Figure 5-14
+    i = i - ((i >>> 1) & 0x5555555555555555L);
+    i = (i & 0x3333333333333333L) + ((i >>> 2) & 0x3333333333333333L);
+    i = (i + (i >>> 4)) & 0x0f0f0f0f0f0f0f0fL;
+    i = i + (i >>> 8);
+    i = i + (i >>> 16);
+    i = i + (i >>> 32);
+    return (int)i & 0x7f;
+}
+```
+
+这自然不是通过遍历统计位数的 $O(n)$ 做法，普遍会认为是 $O(1)$。
+
+但上述操作目的是进行成组统计（分治），而能够这样写是因为默认了 `long` 是 $64$ 长度，因此严格意义来说这段代码复杂度是 $O(\log{64})$ 的。
+
+作为对比，可以把 `Integer.bitCount`  的源码看一下：
+
+```Java
+public static int bitCount(int i) {
+    // HD, Figure 5-2
+    i = i - ((i >>> 1) & 0x55555555);
+    i = (i & 0x33333333) + ((i >>> 2) & 0x33333333);
+    i = (i + (i >>> 4)) & 0x0f0f0f0f;
+    i = i + (i >>> 8);
+    i = i + (i >>> 16);
+    return i & 0x3f;
+}
+```
+
+统计原理如出一辙，而能够这样统计，是因为默认了 `int` 长度为 $32$，其分组统计所需要的操作次数也与二进制数的长度相关，因此复杂度为 $O(\log{32})$。
+
+将上述两个 `bitCount` 视为 $O(1)$ 都是不对的。
 
 ---
 
