--- a/LeetCode/421-430/427. 建立四叉树（中等）.md
+++ b/LeetCode/421-430/427. 建立四叉树（中等）.md
@@ -6,7 +6,7 @@ Tag : 「递归」、「前缀和」
 
 
 
-给你一个 $n * n$ 矩阵 `grid` ，矩阵由若干 $0$ 和 $1$ 组成。请你用四叉树表示该矩阵 `grid` 。
+给你一个 $n \times n$ 矩阵 `grid` ，矩阵由若干 $0$ 和 $1$ 组成。请你用四叉树表示该矩阵 `grid` 。
 
 你需要返回能表示矩阵的 四叉树 的根结点。
 
@@ -16,7 +16,7 @@ Tag : 「递归」、「前缀和」
 
 * `val`：储存叶子结点所代表的区域的值。$1$ 对应 `True`，$0$ 对应 `False`；
 * `isLeaf`: 当这个节点是一个叶子结点时为 `True`，如果它有 $4$ 个子节点则为 `False` 。
-```
+```Java
 class Node {
     public boolean val;
     public boolean isLeaf;
@@ -51,17 +51,26 @@ class Node {
 
 解释：请注意，在下面四叉树的图示中，0 表示 false，1 表示 True 。
 ```
-示例 2：
 ![](https://assets.leetcode.com/uploads/2020/02/12/e2tree.png)
+
+示例 2：
+
+![](https://assets.leetcode.com/uploads/2020/02/12/e2mat.png)
+
 ```
 输入：grid = [[1,1,1,1,0,0,0,0],[1,1,1,1,0,0,0,0],[1,1,1,1,1,1,1,1],[1,1,1,1,1,1,1,1],[1,1,1,1,0,0,0,0],[1,1,1,1,0,0,0,0],[1,1,1,1,0,0,0,0],[1,1,1,1,0,0,0,0]]
+
 输出：[[0,1],[1,1],[0,1],[1,1],[1,0],null,null,null,null,[1,0],[1,0],[1,1],[1,1]]
+
 解释：网格中的所有值都不相同。我们将网格划分为四个子网格。
 topLeft，bottomLeft 和 bottomRight 均具有相同的值。
 topRight 具有不同的值，因此我们将其再分为 4 个子网格，这样每个子网格都具有相同的值。
 ```
 
+![](https://assets.leetcode.com/uploads/2020/02/12/e2tree.png)
+
 示例 3：
+
 ```
 输入：grid = [[1,1],[1,1]]
 
@@ -125,7 +134,7 @@ class Solution {
     }
 }
 ```
-* 时间复杂度：递归的复杂度分析要根据主定理，假设矩阵大小为 $n * n$，根据主定理 $T(n) = aT(\frac{n}{b}) + f(n)$，单次递归最多会产生 $4$ 个子问题（由大矩阵递归 $4$ 个小矩阵），因此问题递归子问题数量 $a = 4$，而子问题规模缩减系数 $b$ 为原本的一半（子矩阵的大小为 $\frac{n}{2} * \frac{n}{2}$），剩余的 $f(n)$ 为判断全 $0$ 和 全 $1$ 的时间开销，不考虑标识位 $ok$ 带来的剪枝效果，每次判断全 $0$ 或全 $1$ 的复杂度与当前问题规模相等，即 $f(n) = O(n^2)$，但整个大小为 $n * n$ 矩阵每次进行长宽减半的子矩阵拆分，最多会被拆分为 $\log{n}$ 次，因此这部分总的计算量为 $\log{n} * n^2$ 。整体复杂度为 $O(n^2 + \log{n} * n^2)$
+* 时间复杂度：递归的复杂度分析要根据主定理，假设矩阵大小为 $n \times n$，根据主定理 $T(n) = aT(\frac{n}{b}) + f(n)$，单次递归最多会产生 $4$ 个子问题（由大矩阵递归 $4$ 个小矩阵），因此问题递归子问题数量 $a = 4$，而子问题规模缩减系数 $b$ 为原本的一半（子矩阵的大小为 $\frac{n}{2} \times \frac{n}{2}$），剩余的 $f(n)$ 为判断全 $0$ 和 全 $1$ 的时间开销，不考虑标识位 $ok$ 带来的剪枝效果，每次判断全 $0$ 或全 $1$ 的复杂度与当前问题规模相等，即 $f(n) = O(n^2)$，但整个大小为 $n \times n$ 矩阵每次进行长宽减半的子矩阵拆分，最多会被拆分为 $\log{n}$ 次，因此这部分总的计算量为 $\log{n} \times n^2$ 。整体复杂度为 $O(n^2 + \log{n} \times n^2)$
 * 空间复杂度：忽略递归带来的额外空间开销，复杂度为 $O(1)$
 
 ---
