--- a/LeetCode/741-750/749. 隔离病毒（困难）.md
+++ b/LeetCode/741-750/749. 隔离病毒（困难）.md
@@ -145,7 +145,7 @@ let g: number[][] = null
 let n: number = 0, m: number = 0
 let vis: boolean[][] = null
 const dirs: number[][] = [[1,0],[-1,0],[0,1],[0,-1]]
-function dfs(_x: number, _y: number, s1: Set<number>, s2: Set<number>): number {
+function search(_x: number, _y: number, s1: Set<number>, s2: Set<number>): number {
     let he = 0, ta = 0, ans = 0
     let d: Array<number> = new Array<number>()
     s1.add(_x * m + _y)
@@ -178,7 +178,7 @@ function getCnt(): number {
         for (let j = 0; j < m; j++) {
             if (g[i][j] == 1 && !vis[i][j]) {
                 let s1 = new Set<number>(), s2 = new Set<number>()
-                const b = dfs(i, j, s1, s2), a = s2.size
+                const b = search(i, j, s1, s2), a = s2.size
                 if (a > max) {
                     max = a; ans = b
                 }
