--- a/LeetCode/981-990/987. 二叉树的垂序遍历（困难）.md
+++ b/LeetCode/981-990/987. 二叉树的垂序遍历（困难）.md
@@ -113,7 +113,6 @@ class Solution {
 * 时间复杂度：令总节点数量为 $n$，填充哈希表时进行树的遍历，复杂度为 $O(n)$；构造答案时需要进行排序，复杂度为 $O(n\log{n})$。整体复杂度为 $O(n\log{n})$
 * 空间复杂度：$O(n)$
 
-
 ---
 
 ### DFS + 优先队列（堆）
@@ -156,6 +155,84 @@ class Solution {
 }
 ```
 * 时间复杂度：令总节点数量为 $n$，将节点信息存入优先队列（堆）复杂度为 $O(n\log{n})$；构造答案复杂度为 $O(n\log{n})$。整体复杂度为 $O(n\log{n})$
+* 空间复杂度：$O(n)$
+
+---
+
+### DFS + 哈希嵌套 + 排序
+
+当然，如果想锻炼一下自己的代码能力，不使用三元组 $(col, row, val)$ 进行存储，而是使用哈希表嵌套，也是可以的。
+
+用三个「哈希表」来记录相关信息：
+
+1. 使用 `node2row` 和 `node2col` 分别用来记录「**节点到行**」&「**节点到列**」的映射关系，并实现 `dfs1` 对树进行遍历，目的是为了记录下相关的映射关系；
+
+2. 使用 `col2row2nodes` 记录「**从列到行，从行到节点集**」的映射关系，具体的存储格式为 `{col : {row : [node1, node2, ... ]}}`，实现 `dfs2` 再次进行树的遍历，配合之前 `node2row` 和 `node2col`信息，填充 `col2row2nodes` 的映射关系；
+
+3. 按照题意，按「列号从小到大」，对于同列节点，按照「行号从小到大」，对于同列同行元素，按照「节点值从小到大」的规则，使用 `col2row2nodes` + 排序 构造答案。
+
+> 注意：本解法可以只进行一次树的遍历，分两步主要是不想 `dfs` 操作过于复杂，加大读者的阅读难度，于是在拆开不影响复杂度上界的情况，选择了分两步。
+
+代码：
+```Java
+class Solution {
+    Map<TreeNode, Integer> node2col = new HashMap<>(), node2row = new HashMap<>();
+    Map<Integer, Map<Integer, List<Integer>>> col2row2nodes = new HashMap<>();
+    public List<List<Integer>> verticalTraversal(TreeNode root) {
+        List<List<Integer>> ans = new ArrayList<>();
+        node2col.put(root, 0);
+        node2row.put(root, 0);
+        dfs1(root);
+        dfs2(root);
+        List<Integer> cols = new ArrayList<>(col2row2nodes.keySet());
+        Collections.sort(cols);
+        for (int col : cols) {
+            Map<Integer, List<Integer>> row2nodes = col2row2nodes.get(col);
+            List<Integer> rows = new ArrayList<>(row2nodes.keySet());
+            Collections.sort(rows);
+            List<Integer> cur = new ArrayList<>();
+            for (int row : rows) {
+                List<Integer> nodes = row2nodes.get(row);
+                Collections.sort(nodes);
+                cur.addAll(nodes);
+            }
+            ans.add(cur);
+        }
+        return ans;
+    }
+    // 树的遍历，根据「节点到列」&「节点到行」的映射关系，构造出「从列到行，从行到节点集」的映射关系
+    void dfs2(TreeNode root) {
+        if (root == null) return ;
+        int col = node2col.get(root), row = node2row.get(root);
+        Map<Integer, List<Integer>> row2nodes = col2row2nodes.getOrDefault(col, new HashMap<>());
+        List<Integer> nodes = row2nodes.getOrDefault(row, new ArrayList<>());
+        nodes.add(root.val);
+        row2nodes.put(row, nodes);
+        col2row2nodes.put(col, row2nodes);
+        dfs2(root.left);
+        dfs2(root.right);
+    }
+    // 树的遍历，记录下「节点到列」&「节点到行」的映射关系
+    void dfs1(TreeNode root) {
+        if (root == null) return ;
+        if (root.left != null) {
+            int col = node2col.get(root);
+            node2col.put(root.left, col - 1);
+            int row = node2row.get(root);
+            node2row.put(root.left, row + 1);
+            dfs1(root.left);
+        }
+        if (root.right != null) {
+            int col = node2col.get(root);
+            node2col.put(root.right, col + 1);
+            int row = node2row.get(root);
+            node2row.put(root.right, row + 1);
+            dfs1(root.right);
+        }
+    }
+}
+```
+* 时间复杂度：令总的节点数量为 $n$，填充几个哈希表的复杂度为 $O(n)$；构造答案时需要对行号、列号和节点值进行排序，总的复杂度上界为 $O(n\log{n})$。整体复杂度为 $O(n\log{n})$
 * 空间复杂度：$O(n)$
 
 ---
