--- a/Index/图论 拓扑排序.md
+++ b/Index/图论 拓扑排序.md
@@ -7,4 +7,5 @@
 | [1976. 到达目的地的方案数](https://leetcode.cn/problems/number-of-ways-to-arrive-at-destination/) | [LeetCode 题解链接](https://leetcode.cn/problems/number-of-ways-to-arrive-at-destination/solution/by-ac_oier-4ule/) | 中等 | 🤩🤩🤩🤩     |
 | [2049. 统计最高分的节点数目](https://leetcode-cn.com/problems/count-nodes-with-the-highest-score/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/count-nodes-with-the-highest-score/solution/gong-shui-san-xie-jian-tu-dfs-by-ac_oier-ujfo/) | 中等 | 🤩🤩🤩🤩     |
 | [剑指 Offer II 114. 外星文字典](https://leetcode.cn/problems/Jf1JuT/) | [LeetCode 题解链接](https://leetcode.cn/problems/Jf1JuT/solution/by-ac_oier-4xmv/) | 困难 | 🤩🤩🤩🤩     |
+| [剑指 Offer II 115. 重建序列](https://leetcode.cn/problems/ur2n8P/) | [LeetCode 题解链接](https://leetcode.cn/problems/ur2n8P/solution/by-ac_oier-oqxs/) | 中等 | 🤩🤩🤩🤩     |
 
