--- a/LeetCode/751-760/757. 设置交集大小至少为2（困难）.md
+++ b/LeetCode/751-760/757. 设置交集大小至少为2（困难）.md
@@ -67,6 +67,9 @@ Tag : 「贪心」
 
 上述情况是对「右端点从小到大」的必要性说明，而「左端点从大到小」目的是为了方便我们处理边界情况而引入的：若在右端点相同的情况下，如果「左端点从小到大」处理的话，会有重复的边缘点被加入 `S`。
 
+> 有同学对重复边缘点加入 `S` 不理解，假设 `S` 当前的次大值和最大值分别为 `j` 和 `k`（其中 $k - j > 1$），如果后面有两个区间分别为 $[k - 1, d]$ 和 $[k + 1, d]$ 时，就会出现问题（其中 `d` 为满足条件的任意右端点）
+更具体的：假设当前次大值和最大值分别为 $2$ 和 $4$，后续两个区间分别为 $[3, 8]$ 和 $[5, 8]$，你会发现先处理 $[3, 8]$ 的话，数值 $8$ 会被重复添加
+
 **上述决策存在直观判断，需要证明不存在比该做法取得的点集 `S` 更小的合法解**：
 
 若存在更小的合法集合方案 `A`（最优解），根据我们最前面对两个线段的重合分析知道，由于存在任意选点均能满足覆盖要求的情况，因此最优解 `A` 的具体方案可能并不唯一。
