--- a/LeetCode/1181-1190/1184. 公交站间的距离（简单）.md
+++ b/LeetCode/1181-1190/1184. 公交站间的距离（简单）.md
@@ -1,6 +1,6 @@
 ### 题目描述
 
-这是 LeetCode 上的 **[1184. 公交站间的距离](https://leetcode-cn.com/problems/day-of-the-week/solution/gong-shui-san-xie-jian-dan-ri-qi-tong-ji-czt6/)** ，难度为 **简单**。
+这是 LeetCode 上的 **[1184. 公交站间的距离](https://leetcode.cn/problems/distance-between-bus-stops/solution/by-ac_oier-fow3/)** ，难度为 **简单**。
 
 Tag : 「模拟」
 
