--- a/Index/模拟.md
+++ b/Index/模拟.md
@@ -78,6 +78,7 @@
 | [565. 数组嵌套](https://leetcode.cn/problems/array-nesting/) | [LeetCode 题解链接](https://leetcode.cn/problems/array-nesting/solution/by-ac_oier-n5hd/) | 中等 | 🤩🤩🤩🤩 |
 | [566. 重塑矩阵](https://leetcode-cn.com/problems/reshape-the-matrix/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/reshape-the-matrix/solution/jian-dan-ti-zhong-quan-chu-ji-ke-yi-kan-79gv5/) | 简单 | 🤩🤩🤩 |
 | [591. 标签验证器](https://leetcode-cn.com/problems/tag-validator/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/tag-validator/solution/by-ac_oier-9l8z/) | 困难 | 🤩🤩🤩🤩 |
+| [592. 分数加减运算](https://leetcode.cn/problems/fraction-addition-and-subtraction/) | [LeetCode 题解链接](https://leetcode.cn/problems/fraction-addition-and-subtraction/solution/by-ac_oier-rmpy/) | 中等 | 🤩🤩🤩🤩🤩 |
 | [594. 最长和谐子序列](https://leetcode-cn.com/problems/longest-harmonious-subsequence/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/longest-harmonious-subsequence/solution/gong-shui-san-xie-yi-ti-shuang-jie-hua-d-quuh/) | 简单 | 🤩🤩🤩🤩 |
 | [598. 范围求和 II](https://leetcode-cn.com/problems/range-addition-ii/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/range-addition-ii/solution/gong-shui-san-xie-jian-dan-mo-ni-ti-by-a-006h/) | 简单 | 🤩🤩🤩 |
 | [599. 两个列表的最小索引总和](https://leetcode-cn.com/problems/minimum-index-sum-of-two-lists/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/minimum-index-sum-of-two-lists/solution/by-ac_oier-oh5b/) | 简单 | 🤩🤩🤩🤩 |
