--- a/LeetCode/221-230/224. 基本计算器（困难）.md
+++ b/LeetCode/221-230/224. 基本计算器（困难）.md
@@ -2,33 +2,36 @@
 
 这是 LeetCode 上的 **[224. 基本计算器](https://leetcode-cn.com/problems/basic-calculator/solution/shuang-zhan-jie-jue-tong-yong-biao-da-sh-olym/)** ，难度为 **中等**。
 
-Tag : 「表达式计算」
+Tag : 「表达式计算」、「栈」
 
 
 
-给你一个字符串表达式 s ，请你实现一个基本计算器来计算并返回它的值。
+给你一个字符串表达式 `s` ，请你实现一个基本计算器来计算并返回它的值。
 
 
 示例 1：
 ```
 输入：s = "1 + 1"
+
 输出：2
 ```
 示例 2：
 ```
 输入：s = " 2-1 + 2 "
+
 输出：3
 ```
 示例 3：
 ```
 输入：s = "(1+(4+5+2)-3)+(6+8)"
+
 输出：23
 ```
 
 提示：
-* 1 <= s.length <= 3 * $10^5$
-* s 由数字、'+'、'-'、'('、')'、和 ' ' 组成
-* s 表示一个有效的表达式
+* $1 <= s.length <= 3 \times 10^5$
+* `s` 由`数字`、`'+'`、`'-'`、`'('`、`')'`、和 `' '` 组成
+* `s` 表示一个有效的表达式
 
 ---
 
@@ -50,7 +53,7 @@ Tag : 「表达式计算」
 * 由于第一个数可能是负数，为了减少边界判断。一个小技巧是先往 `nums` 添加一个 0
 * 为防止 () 内出现的首个字符为运算符，将所有的空格去掉，并将 `(-` 替换为 `(0-`，`(+` 替换为 `(0+`（当然也可以不进行这样的预处理，将这个处理逻辑放到循环里去做）
 
-代码：
+Java 代码：
 ```Java
 class Solution {
     public int calculate(String s) {
@@ -81,8 +84,7 @@ class Solution {
                 }
             } else {
                 if (isNum(c)) {
-                    int u = 0;
-                    int j = i;
+                    int u = 0, j = i;
                     // 将从 i 位置开始后面的连续数字整体取出，加入 nums
                     while (j < n && isNum(cs[j])) u = u * 10 + (int)(cs[j++] - '0');
                     nums.addLast(u);
@@ -112,17 +114,89 @@ class Solution {
     }
 }
 ```
+C++ 代码：
+```C++
+class Solution {
+public:
+    void replace(string& s){
+        int pos = s.find(" ");
+        while (pos != -1) {
+            s.replace(pos, 1, "");
+            pos = s.find(" ");
+        }
+    }
+    int calculate(string s) {
+        // 存放所有的数字
+        stack<int> nums;
+        // 为了防止第一个数为负数，先往 nums 加个 0
+        nums.push(0);
+        // 将所有的空格去掉
+        replace(s);
+        // 存放所有的操作，包括 +/-
+        stack<char> ops;
+        int n = s.size();
+        for(int i = 0; i < n; i++) {
+            char c = s[i];
+            if(c == '(')
+                ops.push(c);
+            else if(c == ')') {
+                // 计算到最近一个左括号为止
+                while(!ops.empty()) {
+                    char op = ops.top();
+                    if(op != '(')
+                        calc(nums, ops);
+                    else {
+                        ops.pop();
+                        break;
+                    }
+                }
+            }
+            else {
+                if(isdigit(c)) {
+                    int cur_num = 0, j = i;
+                    // 将从 i 位置开始后面的连续数字整体取出，加入 nums
+                    while(j <n && isdigit(s[j]))
+                        cur_num = cur_num*10 + (s[j++] - '0');
+                    // 注意上面的计算一定要有括号，否则有可能会溢出
+                    nums.push(cur_num);
+                    i = j - 1;
+                }
+                else {
+                    if (i > 0 && (s[i - 1] == '(' || s[i - 1] == '+' || s[i - 1] == '-')) {
+                        nums.push(0);
+                    }
+                    // 有一个新操作要入栈时，先把栈内可以算的都算了
+                    while(!ops.empty() && ops.top() != '(')
+                        calc(nums, ops);
+                    ops.push(c);
+                }
+            }
+        }
+        while(!ops.empty())
+            calc(nums, ops);
+        return nums.top();
+    }
+    void calc(stack<int> &nums, stack<char> &ops) {
+        if(nums.size() < 2 || ops.empty())
+            return;
+        int b = nums.top(); nums.pop();
+        int a = nums.top(); nums.pop();
+        char op = ops.top(); ops.pop();
+        nums.push(op == '+' ? a+b : a-b);
+    }
+};
+```
 * 时间复杂度：$O(n)$
 * 空间复杂度：$O(n)$
 
-***
+---
 
 ### 进阶
 
 1. 如果在此基础上，再考虑 `*` 和 `/`，需要增加什么考虑？如何维护运算符的优先级？
-2. 在 1 的基础上，如果考虑支持自定义符号，例如 a / func(a, b) * (c + d)，需要做出什么调整？
+2. 在 $1$ 的基础上，如果考虑支持自定义符号，例如 `a / func(a, b) * (c + d)`，需要做出什么调整？
 
-***
+---
 
 ### 补充
 
@@ -213,11 +287,11 @@ class Solution {
 }
 ```
 
-2. 关于进阶 2，其实和进阶 1 一样，重点在于维护优先级。但还有一些编码细节：
+2. 关于进阶 $2$，其实和进阶 $1$ 一样，重点在于维护优先级。但还有一些编码细节：
 
-对于非单个字符的运算符（例如 函数名 function），可以在处理前先将所有非单字符的运算符进行替换（将 function 替换为 `@#` 等）
+对于非单个字符的运算符（例如 函数名`function`），可以在处理前先将所有非单字符的运算符进行替换（将 `function` 替换为 `@#` 等）
 
-然后对特殊运算符做特判，确保遍历过程中识别到特殊运算符之后，往后整体读入（如 function(a,b) -> @(a, b)，@(a, b) 作为整体处理）
+然后对特殊运算符做特判，确保遍历过程中识别到特殊运算符之后，往后整体读入（如 `function(a,b)` -> `@(a, b)`，`@(a, b)` 作为整体处理）
 
 ---
 
